--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-}
+
+} 
+
 .card-white{
 	display : flex ;
 	align-items: center ;
@@ -98,5 +100,16 @@ a {
     background-repeat: no-repeat;
     background-color: rgba(255, 255, 255, 0.8);
 
+}
 
+@media (max-width: 500px){
+	.container{
+		width: 400px;
+	}
+}
+
+@media (max-width: 760px){
+	.container{
+		width: 600px;
+	}
 }
